feat: get workout reviews
