# api/api.go
@@ -105,7 +105,7 @@ func (a *Application) Mount() http.Handler {
 					Delete("/{exerciseID}/like", h.UnlikeExerciseHandler)
 			})
 			r.Route("/workouts", func(r chi.Router) {
-				r.Get("/{workoutID}", h.GetWorkout)
+				r.Get("/{workoutID}", h.GetWorkoutHandler)
 				r.With(m.AuthTokenMiddleware).Post("/", h.CreateWorkoutHandler)
 				r.Get("/", h.GetAllWorkouts)
 				r.With(m.AuthTokenMiddleware).Post("/{workoutID}/like", h.LikeWorkoutHandler)
@@ -113,6 +113,7 @@ func (a *Application) Mount() http.Handler {
 			})
 			r.Route("/reviews", func(r chi.Router) {
 				r.With(m.AuthTokenMiddleware).Post("/workout/{workoutID}", h.ReviewWorkoutHandler)
+				r.Get("/workout/{workoutID}", h.GetWorkoutReviewsHandler)
 			})
 			r.Route("/nutrients", func(r chi.Router) {
 				r.With(m.AuthTokenMiddleware).
